# mainsequence-sdk

./: .pre-commit-config.yaml  CHANGELOG.md  DataNode pickling removal plan.md  Dockerfile  ID to UID refactor.md  README.md  SECURITY.md  ai_refactor  mkdocs.yml  pyproject.toml
agent_scaffold/: AGENTS.md
agents_scaffold/: AGENTS.md
agents_scaffold/project_builder/: SKILL.md
docs/: SUMMARY.md  cli.md  index.md
docs/_includes/: data_node_run.html  datanode_cycle.html
docs/adr/: 0001-canonical-portfolio-weights-datanode.md  0002-multidimensional-data-node-update-contract.md  0003-markets-consolidation.md  0004-client-markets-models-core.md  0004-client-markets-models.md  0005-unified-vfb-weight-datanodes.md  0006-tdag-public-uid-identifiers.md  0007-client-wide-uid-identity.md  0008-market-datanode-boundary.md  0008-metatable-cli-surface.md  0009-cli-public-resource-identity.md  0009-remove-client-asset-orm-models.md  0010-move-markets-client-under-markets.md  0010-remove-legacy-timescale-direct-interface.md  0011-duckdb-n-dimensional-row-identity.md  0012-explicit-duckdb-data-source-selection.md  0013-local-sqlite-data-source-support.md  0014-data-node-records-and-foreign-keys.md  0015-api-data-node-uid-runtime-identity.md  0016-dtype-serialization-and-parsing-contract.md  0017-metatable-canonical-storage.md  0017-metatable-schema-graph-client.md  0018-platform-managed-metatable-runtime-binding.md  0018-remove-datanode-pickling.md  0029-a2a-message-send-only.md  (+11 more)
mainsequence/: __init__.py  agent_skills.py  ai_instructions.txt  bootstrap.py  compute_validation.py  defaults.py  logconf.py  runtime_flags.py  scaffold_skills.py
mcp/: settings.py
scripts/: app.sample.py  gen_ref_pages.py  generate_examples_index.py  get_git_and_run.sh  jupyter_server_config.py  pre-commit-config.tempalte.yml  pyproject.template.toml  setup_project.sh  template_node_file.py
tests/: joint_data_nodes_filters.py  mock_execution.py  test_account_data_nodes.py  test_agent_skills.py  test_asset_simple_tables.py  test_auth_precedence.py  test_build_operations_hashing.py  test_cli.py  test_cli_browser_auth.py  test_cli_migrations.py  test_client.py  test_client_account_models.py  test_client_asset_models.py  test_client_markets_models_compat.py  test_command_center_app_component_models.py  test_command_center_data_models.py  test_command_center_models.py  test_command_center_table_contracts.py  test_command_center_tabular_transform.py  test_data_access_mixin_dimension_audit.py  test_data_node_search_join_filters.py  test_data_node_storage_dimension_queries.py  test_data_node_update_flow.py  test_dependency_extras.py  test_duckdb_interface_dimensions.py  test_filter_normalization.py  test_instrumentation.py  test_instruments.py  test_logconf.py  test_logged_user_components.py  test_markets_data_node.py  test_markets_package_compat.py  test_meta_table_migrations.py  test_meta_tables_client_models.py  test_meta_tables_sqlalchemy_contracts.py  test_models_user_request_bound_auth.py  test_pod_project_resolution.py  test_portfolio_price_sources.py  test_project_batch_jobs_from_file.py  test_run_configuration.py  (+13 more)
(+475 files in other folders)
